<resources>
    <string name="app_name">Random Knowledge Quiz</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="facebook_app_id">1654107081541612</string>
    <string name="chooseAQuiz">CHOOSE A QUIZ</string>
    <string name="highScores">VIEW HIGH SCORES</string>
    <string name="settings">CHANGE SETTINGS</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="cancel">CANCEL</string>
    <string name="save">SAVE</string>
    <string name="timeLimitLabel">TIME LIMIT PER QUESTION (SECONDS)</string>
    <string name="defaultTimeLimitValue">10</string>
    <string name="instantFeedback">INSTANT FEEDBACK</string>
    <string name="title_activity_quiz_results">QuizResultsActivity</string>
    <string name="yourScore">YOUR SCORE:</string>
    <string name="oneHundredPercent">100% COMPLETED</string>
    <string name="newQuiz">NEW QUIZ</string>
    <string name="home">HOME</string>
    <string name="share">Share</string>
    <string name="takeScreenshot">TAKE SCREENSHOT</string>
    <string name="title_activity_high_scores">HighScoresActivity</string>
    <string name="randomKnowledgeTrivia">RANDOM KNOWLEDGE TRIVIA</string>
    <string name="highScoresLabel">HIGH SCORES</string>
    <string name="geographyQuiz">GEOGRAPHY QUIZ</string>
    <string name="animalQuiz">ANIMAL QUIZ</string>
    <string name="historyQuiz">HISTORY QUIZ</string>
    <string name="sportsQuiz">SPORTS QUIZ</string>
    <string name="randomTriviaQuiz">RANDOM TRIVIA QUIZ</string>
</resources>
