<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.cnowak_rperez.randomknowledgequiz.SettingsActivityFragment"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/timeLimitLayout">

        <TextView
            android:id="@+id/timeLimitLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/timeLimitLabel"
            android:textSize="24sp"
            android:textColor="@color/orange"
            android:textStyle="bold"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/activity_vertical_margin"/>

        <TextView
            android:id="@+id/timeLimitValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/timeLimitLabel"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:text="@string/defaultTimeLimitValue"
            android:textSize="24sp"
            android:textColor="@color/white"
            android:textStyle="bold"/>

        <SeekBar
            android:id="@+id/timeLimitSeekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/timeLimitLabel"
            android:layout_toStartOf="@+id/timeLimitValue"
            android:layout_toLeftOf="@+id/timeLimitValue"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:max="20"
            android:progress="10"/>

        <TextView
            android:id="@+id/instantFeedbackLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/instantFeedback"
            android:textSize="24sp"
            android:textColor="@color/orange"
            android:textStyle="bold"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_below="@+id/timeLimitSeekBar"/>

        <Switch
            android:id="@+id/instantFeedbackSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/instantFeedbackLabel"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:checked="false"/>

    </RelativeLayout>

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/home_button"
        android:text="@string/cancel"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_weight="1"/>

    <Button
        android:id="@+id/saveButton"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/home_button"
        android:text="@string/save"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_weight="1"/>

</LinearLayout>
